--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       --bg:#f6f7fb; --card:#ffffff; --ink:#111; --muted:#6b7280; --line:#e5e7eb;
       --brand:#2563eb; --brand-ink:#fff; --ok:#16a34a; --warn:#c2410c;
       --info-bg:#eff6ff; --info-bd:#bfdbfe; --info-ink:#1e40af;
+      --ctl-h:44px;
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family:system-ui,'Segoe UI',Arial,Helvetica,sans-serif}
@@ -16,12 +17,16 @@
     .card{background:var(--card);border:1px solid var(--line);border-radius:16px;box-shadow:0 2px 10px #00000010;padding:16px}
     label{display:block;font-weight:600;margin-top:10px}
     select,input[type="number"],button{font-family:inherit;font-size:16px}
-    select,input[type="number"]{width:100%;padding:10px 12px;border:1px solid var(--line);border-radius:10px;background:#fff}
+    select,input[type="number"]{width:100%;padding:10px 12px;border:1px solid var(--line);border-radius:10px;background:#fff;height:var(--ctl-h);}
+    /* unify number inputs across browsers */
+    input[type="number"]{-moz-appearance:textfield}
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"]::-webkit-inner-spin-button{height:var(--ctl-h)}
     .row{display:grid;grid-template-columns:1fr 120px 36px;gap:8px;align-items:end}
     .btn{border:none;border-radius:10px;padding:12px 14px;cursor:pointer}
     .btn.brand{background:var(--brand);color:var(--brand-ink);font-weight:700}
     .btn.ghost{background:#fff;border:1px solid var(--line)}
-    .btn.icon{width:36px;height:36px;display:grid;place-items:center;border-radius:10px;border:1px solid var(--line);background:#fff}
+    .btn.icon{width:var(--ctl-h);height:var(--ctl-h);display:grid;place-items:center;border-radius:10px;border:1px solid var(--line);background:#fff}
     .sub{color:var(--muted);font-size:14px}
     .sub-lg{font-size:16px;font-weight:600}
     .rows{display:flex;flex-direction:column;gap:12px;margin-top:8px}
@@ -57,8 +62,9 @@
       .wrap{max-width:560px; padding:12px}
       .tabs{flex-wrap:wrap}
       .tab{flex:1; text-align:center; padding:10px 12px}
-      .row{grid-template-columns: 1fr 1fr; align-items:end}
-      .row .btn.icon{grid-column: 2; justify-self:end; margin-top:4px}
+      /* size | qty | delete aligned in one row */
+      .row{grid-template-columns: 1fr minmax(90px,120px) var(--ctl-h); align-items:end}
+      .row .btn.icon{grid-column: 3; justify-self:end; margin-top:0}
       label{margin-top:8px}
       select,input[type="number"]{font-size:15px; padding:10px}
       .kpi{grid-template-columns:1fr}
@@ -66,8 +72,18 @@
       .progress{height:12px}
       .total .mono{font-size:20px}
     }
+      .pill{padding:8px}
+      .progress{height:12px}
+      .total .mono{font-size:20px}
+    }
     @media (max-width: 380px){
       .wrap{padding:10px}
+      .tab{padding:8px 10px}
+      /* on very narrow screens, stack delete under qty */
+      .row{grid-template-columns: 1fr 1fr}
+      .row .btn.icon{grid-column:2; justify-self:end; margin-top:4px}
+      .total .mono{font-size:18px}
+    }
       .tab{padding:8px 10px}
       .total .mono{font-size:18px}
     }
@@ -508,5 +524,3 @@
 </body>
 </html>
 
-</body>
-</html>
